[gd_scene load_steps=15 format=3 uid="uid://bldp1jftixjns"]

[ext_resource type="Script" path="res://scripts/shared/scene/scene_transitioner.gd" id="1_y158f"]
[ext_resource type="PackedScene" uid="uid://phwfhu2bd73q" path="res://scenes/loading_scene.tscn" id="2_b46hs"]
[ext_resource type="PackedScene" uid="uid://d2u3y04xy7eld" path="res://scenes/title_scene.tscn" id="3_jo5v0"]
[ext_resource type="PackedScene" uid="uid://bv7pd1to17sry" path="res://scenes/game_scene.tscn" id="4_fnmid"]
[ext_resource type="PackedScene" uid="uid://bh48bapr5jra" path="res://scenes/end_scene.tscn" id="5_qo8sx"]
[ext_resource type="Script" path="res://scripts/shared/audio/audio_system.gd" id="6_ubjy8"]
[ext_resource type="AudioStream" uid="uid://cb4u6dj4uxu2i" path="res://audio/bad_sound.wav" id="7_x6fc2"]
[ext_resource type="AudioStream" uid="uid://dcya24pemx4uf" path="res://audio/earthquake.wav" id="8_5avbw"]
[ext_resource type="AudioStream" uid="uid://bslnabsxedikg" path="res://audio/cursor_move.wav" id="8_ktgy2"]
[ext_resource type="AudioStream" uid="uid://kbstjmjt14y6" path="res://audio/fire.wav" id="9_3j7iu"]
[ext_resource type="AudioStream" uid="uid://dbfccnoeylhl0" path="res://audio/wonder_placed.wav" id="9_137b0"]
[ext_resource type="AudioStream" uid="uid://b1bef06d1awp6" path="res://audio/place_settlement.wav" id="10_h21xt"]
[ext_resource type="AudioStream" uid="uid://c2ecxx7hfrda7" path="res://audio/flood.wav" id="10_rm1vm"]
[ext_resource type="AudioStream" uid="uid://jevnv0p7y7do" path="res://audio/lightning_strike.wav" id="11_dn2vi"]

[node name="core_scene" type="Node"]

[node name="scene_handler" type="Node" parent="." node_paths=PackedStringArray("loading_scene_root", "scene_root")]
script = ExtResource("1_y158f")
loading_scene_root = NodePath("../loading_root")
scene_root = NodePath("../scene_root")
loading_scene = ExtResource("2_b46hs")
title_scene = ExtResource("3_jo5v0")
game_scene = ExtResource("4_fnmid")
end_scene = ExtResource("5_qo8sx")
load_buffer_seconds = 5

[node name="loading_root" type="Node" parent="."]

[node name="scene_root" type="Node" parent="."]

[node name="title_scene" parent="scene_root" instance=ExtResource("3_jo5v0")]

[node name="audio_handler" type="Node" parent="." node_paths=PackedStringArray("sfx_player", "move_sfx_player", "bgm_player")]
script = ExtResource("6_ubjy8")
bad_sound = ExtResource("7_x6fc2")
cursor_move_sound = ExtResource("8_ktgy2")
wonder_place_sound = ExtResource("9_137b0")
settlement_place_sound = ExtResource("10_h21xt")
earthquake_sound = ExtResource("8_5avbw")
fire_sound = ExtResource("9_3j7iu")
flood_sound = ExtResource("10_rm1vm")
lightning_strike_sound = ExtResource("11_dn2vi")
sfx_player = NodePath("sfx_player")
move_sfx_player = NodePath("move_sfx_player")
bgm_player = NodePath("bgm_player")

[node name="sfx_player" type="AudioStreamPlayer" parent="audio_handler"]
volume_db = -10.0

[node name="bgm_player" type="AudioStreamPlayer" parent="audio_handler"]
volume_db = -20.0

[node name="move_sfx_player" type="AudioStreamPlayer" parent="audio_handler"]
volume_db = -10.0
